[metadata]
name = midas
author = Udesh habardauwa
author_email = udesh86@gmail.com
description = For generating pretty dataframes with Dota 2 data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/onedeeper/midas
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >= 3.7